src/scss/_purpose.scss
#purposePage {

  margin-top: rem-calc(50px);

  > section {
    @include grid-row();
    margin-bottom: rem-calc(100px);
  }

  .header-alignment {
    @include grid-column($columns:11);
    margin-bottom: rem-calc(20px);
  }

  .belief {
    @include grid-row();
    margin-bottom: rem-calc(40px);

    aside {
      @include grid-column($columns:12);
      margin-bottom: rem-calc(10px);
      position: relative;
      top: 50%;
      transform: translateY(-50%);
    }

    article {
      @include grid-column($columns:12);
      position: relative;
      top: 50%;
      transform: translateY(-50%);
    }

    @media #{$medium-up} {
      margin-bottom: rem-calc(50px);

      aside {
        @include grid-column($columns:3);
      }

      article {
        @include grid-column($columns:9);

      }

      &:nth-of-type(2n) {
        aside {
          @include grid-column($columns:3, $push:9);
        }

        article {
          @include grid-column($columns:9, $pull:3);
        }
      }
    }
  }
}

